# microquery-mcp

./: LICENSE  README.md  microquery_mcp.py  pyproject.toml  server.json  smithery.yaml
