[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microquery-mcp"
version = "1.0.2"
description = "MCP server for microquery.dev — SQL over FDA, SEC, PubMed, blockchain, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://microquery.dev"
Repository = "https://github.com/microqueryhq/microquery-mcp"

[project.scripts]
microquery-mcp = "microquery_mcp:main"

[tool.hatch.build.targets.wheel]
include = ["microquery_mcp.py"]
